Live/elasticsearch-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-ingest
    env: prod
  name: elasticsearch-ingest
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: elasticsearch-ingest
      env: prod
  template:
    metadata:
      labels:
        app: elasticsearch-ingest
        env: prod
    spec:
      containers:
      - name: elasticsearch-ingest
        image: registry.efarda.ir/elasticsearch:7.0.0
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
          #        resources:
          #          limits:
          #            cpu: "3"
          #            memory: 16Gi
          #
        volumeMounts:
        - name: storage-client
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-ingest-jvm
          mountPath: /usr/share/elasticsearch/config/jvm.options
          subPath: jvm.options

      volumes:
      - name: storage-client
        persistentVolumeClaim:
          claimName: elasticsearch-clinet-pvc
      - name: elasticsearch-ingest-jvm
        configMap:
          name: elasticsearch-ingest-jvm

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  name: elasticsearch-ingest
  labels:
    env: prod
spec:
  type: ClusterIP
  selector:
    app: elasticsearch-ingest
  ports:
  - name: http
    port: 9200
    protocol: TCP
