Live/elasticsearch-data.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-data
    env: prod
  name: elasticsearch-data
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: elasticsearch-data
      env: prod
  template:
    metadata:
      labels:
        app: elasticsearch-data
        env: prod
    spec:
      containers:
      - name: elasticsearch-data
        image: registry.efarda.ir/elasticsearch:7.0.0
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
          #        resources:
          #          limits:
          #            cpu: "3"
          #            memory: 16Gi
        volumeMounts:
        - name: storage-data
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-data-jvm
          mountPath: /usr/share/elasticsearch/config/jvm.options
          subPath: jvm.options

      volumes:
      - name: storage-data
        persistentVolumeClaim:
          claimName: elasticsearch-data-pvc
      - name: elasticsearch-data-jvm
        configMap:
          name: elasticsearch-data-jvm

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  name: elasticsearch-data
  labels:
    env: prod
spec:
  clusterIP: None
  selector:
    app: elasticsearch-data
  ports:
  - port: 9300
    name: transport
