Live/elasticsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-master
    env: prod
  name: elasticsearch-master
  namespace: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-master
  template:
    metadata:
      labels:
        app: elasticsearch-master
        env: prod
    spec:
      containers:
      - name: elasticsearch-master
        image: registry.efarda.ir/elasticsearch:7.17.0
        volumeMounts:
        - name: storage-master
          mountPath: /usr/share/elasticsearch/data
          #        - name: elasticsearch-master-jvm
          #          mountPath: /usr/share/elasticsearch/config/jvm.options
          #          subPath: jvm.options
        - name: elasticsearch-config-master
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml

        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        resources:
          limits:
            cpu: "3"
            memory: 8Gi

      volumes:
      - name: storage-master
        persistentVolumeClaim:
          claimName: elasticsearch-master-pvc
      - name: elasticsearch-config-master
        configMap:
          name: elasticsearch-config-master

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-ingest
    env: prod
  name: elasticsearch-ingest
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: elasticsearch-ingest
      env: prod
  template:
    metadata:
      labels:
        app: elasticsearch-ingest
        env: prod
    spec:
      containers:
      - name: elasticsearch-ingest
        image: registry.efarda.ir/elasticsearch:7.17.0
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
          #        resources:
          #          limits:
          #            cpu: "3"
          #            memory: 16Gi
        
        volumeMounts:
        - name: storage-ingest
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-config-ingest
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
          #        - name: elasticsearch-ingest-jvm
          #          mountPath: /usr/share/elasticsearch/config/jvm.options
          #          subPath: jvm.options

      volumes:
      - name: storage-ingest
        persistentVolumeClaim:
          claimName: elasticsearch-clinet-pvc
      - name: elasticsearch-config-ingest
        configMap:
          name: elasticsearch-config-ingest
          #      - name: elasticsearch-ingest-jvm
          #        configMap:
          #          name: elasticsearch-ingest-jvm

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-data
    env: prod
  name: elasticsearch-data
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: elasticsearch-data
      env: prod
  template:
    metadata:
      labels:
        app: elasticsearch-data
        env: prod
    spec:
      containers:
      - name: elasticsearch-data
        image: registry.efarda.ir/elasticsearch:7.17.0
        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
          #        resources:
          #          limits:
          #            cpu: "3"
          #            memory: 16Gi
          #
        volumeMounts:
        - name: storage-data
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-config-data
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
          #        - name: elasticsearch-ingest-jvm
          #          mountPath: /usr/share/elasticsearch/config/jvm.options
          #          subPath: jvm.options

      volumes:
      - name: storage-data
        persistentVolumeClaim:
          claimName: elasticsearch-data-pvc
      - name: elasticsearch-config-data
        configMap:
          name: elasticsearch-config-data
          #      - name: elasticsearch-ingest-jvm
          #        configMap:
          #          name: elasticsearch-ingest-jvm

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  name: elasticsearch-data
  labels:
    env: prod
spec:
  type: ClusterIP
  selector:
    app: elasticsearch-data
  ports:
  - name: http
    port: 9200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  name: elasticsearch-ingest
  labels:
    env: prod
spec:
  type: ClusterIP
  selector:
    app: elasticsearch-ingest
  ports:
  - name: http
    port: 9200
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  name: elasticsearch-master
  labels:
    env: prod
spec:
  clusterIP: None
  selector:
    app: elasticsearch-master
  ports:
  - name: transport
    port: 9300
