Live/elasticsearch-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-exporter
  name: elasticsearch-exporter
  namespace: graylog
spec:
  selector:
    matchLabels:
      app: elasticsearch-exporter
  template:
    metadata:
      labels:
        app: elasticsearch-exporter
    spec:
      containers:
      - name: elasticsearch-exporter
        image: registry.efarda.ir/justwatch/elasticsearch_exporter:1.1.0
        command:
          - "elasticsearch_exporter"
          - "--es.uri=http://elasticsearch-ingest:9200"
          - "--es.all"
          - "--es.cluster_settings"
          - "--es.indices"
          - "--es.shards"
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "100m"          

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-exporter
  labels:
    app: elasticsearch-exporter
  namespace: graylog
spec:
  selector:
    app: elasticsearch-exporter
  type: ClusterIP
  ports:
  - name: exporter
    port: 9114
    targetPort: 9114
    protocol: TCP
