Live/elasticsearch-master.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: elasticsearch-master
    env: prod
  name: elasticsearch-master
  namespace: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-master
  template:
    metadata:
      labels:
        app: elasticsearch-master
        env: prod
    spec:
      containers:
      - name: elasticsearch-master
        image: registry.efarda.ir/elasticsearch:7.0.0
        volumeMounts:
        - name: storage-master
          mountPath: /usr/share/elasticsearch/data
        - name: elasticsearch-master-jvm
          mountPath: /usr/share/elasticsearch/config/jvm.options
          subPath: jvm.options

        ports:
        - containerPort: 9300
          name: transport
          protocol: TCP
        resources:
          limits:
            cpu: "3"
            memory: 8Gi

      volumes:
      - name: storage-master
        persistentVolumeClaim:
          claimName: elasticsearch-master-pvc
      - name: elasticsearch-master-jvm
        configMap:
          name: elasticsearch-master-jvm

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  name: elasticsearch-master
  labels:
    env: prod
spec:
  clusterIP: None
  selector:
    app: elasticsearch-master
  ports:
  - name: transport
    port: 9300
