Live/graylog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: graylog
  labels:
    component: graylog
    role: master
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      component: graylog
      role: master
  template:
    metadata:
      labels:
        component: graylog
        role: master
    spec:
      containers:
      - name: graylog
        image: registry.efarda.ir/graylog/graylog:4.0.5-1

        volumeMounts:
        - name: storage-graylog
          mountPath: /usr/share/graylog/data/journal
        - name: graylog-plugin
          mountPath: /usr/share/graylog/plugin

      volumes:
      - name: storage-graylog
        persistentVolumeClaim:
          claimName: graylog-pvc
      - name: graylog-plugin
        persistentVolumeClaim:
          claimName: graylog-plugin-pvc

      tolerations:
      - key: node.kubernetes.io/not-ready
        effect: NoExecute
        tolerationSeconds: 0
      - key: node.kubernetes.io/unreachable
        effect: NoExecute
        tolerationSeconds: 0

      imagePullSecrets:
        - name: efarda-repo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: graylog
    role: master
  name: graylog
  namespace: graylog
spec:
  ports:
  - name: graylog-api
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: online-nginx
    port: 12334
    protocol: UDP
    targetPort: 12334
  - name: online-error
    port: 12335
    protocol: UDP
    targetPort: 12335
  - name: ppanel
    port: 12337
    protocol: UDP
    targetPort: 12337


  selector:
    component: graylog
    role: master
  sessionAffinity: None
  type: ClusterIP
