Live/kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: graylog
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: registry.efarda.ir/kibana:7.0.0
      imagePullSecrets:
        - name: efarda-repo

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: graylog
  labels:
    app: kibana
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
