Live/logstash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: graylog
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
      - name: logstash
        image: registry.efarda.ir/logstash:6.8.9
        args:
          - --path.config=/usr/share/logstash/pipeline/logstash.conf
        volumeMounts:
          - name: config-volume
            mountPath: /usr/share/logstash/config
          - name: logstash-pipeline-volume
            mountPath: /usr/share/logstash/pipeline
          - name: logstash-last-run-volume
            mountPath: /etc/logstash/conf.d/lastrun

      volumes:
      - name: config-volume
        configMap:
          name: logstash-config
          items:
            - key: logstash.yml
              path: logstash.yml

      - name: logstash-pipeline-volume
        configMap:
          name: logstash-config
          items:
            - key: logstash.conf
              path: logstash.conf

      - name: logstash-last-run-volume
        persistentVolumeClaim:
          claimName: logstash-pvc

      imagePullSecrets:
        - name: efarda-repo
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
  namespace: graylog
spec:
  selector:
    app: logstash
  ports:
  - protocol: TCP
    port: 5044
    targetPort: 5044
---
apiVersion: v1
kind: Service
metadata:  
  name: club-service
  namespace: graylog
spec:
  selector:    
    app: logstash
  type: NodePort
  ports:  
  - name: http
    port: 9000
    targetPort: 9000
    nodePort: 30000
    protocol: TCP
