Live/zookeeper-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper-1
    env: prod
  name: zookeeper-1
  namespace: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper-1
  template:
    metadata:
      labels:
        app: zookeeper-1
        env: prod
    spec:
      containers:
      - name: zookeeper-1
        image: registry.efarda.ir/confluentinc/cp-zookeeper:7.0.1
        ports:
        - containerPort: 2181
      imagePullSecrets:
        - name: efarda-repo
      tolerations:
      - key: app
        effect: NoSchedule
        operator: Equal 
        value: elk
      - key: app
        effect: NoExecute
        operator: Equal 
        value: elk
          #        resources:
          #          requests:
          #            memory: "12Gi"
          #        limits:
          #        ephemeral-storage: "4Gi"
          #          value: true
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-1
  labels:
    app: zookeeper-1
  namespace: graylog
spec:
  type: ClusterIP
  ports:
  - name: client
    port: 2181
    protocol: TCP
  - name: follower
    port: 2888
    protocol: TCP
  - name: leader
    port: 3888
    protocol: TCP
  selector:
    app: zookeeper-1
